[gd_scene load_steps=2 format=3 uid="uid://b8glm36kpokwb"]

[ext_resource type="Script" path="res://hud.gd" id="1_74pu3"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_74pu3")

[node name="ScoreLabel" type="Label" parent="."]
texture_filter = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.0
offset_right = 31.0
offset_bottom = 30.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "Score:"

[node name="LivesLabel" type="Label" parent="."]
texture_filter = 1
offset_left = 431.0
offset_right = 487.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "Lives:"

[node name="Message" type="Label" parent="."]
offset_left = 174.0
offset_top = 3.0
offset_right = 214.0
offset_bottom = 33.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "Breakout!"

[node name="RestartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -27.5
offset_right = 60.5
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
text = "Restart"

[connection signal="pressed" from="RestartButton" to="." method="restart_button_pressed"]
